--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -1,9 +1,6 @@
 <template name="mainLayout">
-	<main>
+	{{> sideNav}}
+	<main class="main-layout">
 		{{> Template.dynamic template=main}}
 	</main>
-</template>
-
-<template name="test">
-	EEEJ!!
 </template>
