shopping list, filtering menu items

--- a/client/layouts/homeLayout.html
+++ b/client/layouts/homeLayout.html
@@ -1,8 +1,5 @@
 <template name="homeLayout">
-	<header>
-		<h1>My Recipe Book</h1>
-		{{> loginButtons}}
-	</header>
+	{{> header}}
 	<main>
 		<div class="billboard"><h1>Organize your meals</h1></div>
 	</main>
