--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -1,5 +1,6 @@
 <template name="mainLayout">
 	{{> sideNav}}
+	{{> header}}
 	<main class="main-layout">
 		{{> Template.dynamic template=main}}
 	</main>
